--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.ejb.interceptor=com.itz.iwas.helpers.configs.Hib
 spring.credential.login-path=/api/login,/api/refresh,/api/ping
 spring.credential.swagger-path=/v2/api-docs,/configuration/ui\
   ,/swagger-resources/**,/configuration/security,/swagger-ui.html,/webjars/**
-spring.credential.security-check=true
+spring.credential.security-check=false
 spring.swagger.base-path=com.itz.iwas
 spring.crypto.key-path=/des.key
 useSwagger=true
